Upgrade Java runtime to version 21 by updating maven.compiler.release properties.